[gd_scene load_steps=3 format=2]

[ext_resource path="res://physics/interact_icon/assets/icon_48.png" type="Texture" id=1]
[ext_resource path="res://physics/interact_icon/interact_icon.gd" type="Script" id=3]

[node name="InteractIcon" type="Control"]
margin_left = -24.0
margin_top = -24.0
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 24, 24 )
mouse_filter = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -48.0
margin_bottom = -48.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="." to="." method="_on_mouse_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
